Safari365 Prod/src/objects/Bug__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Normal</fullName>
                </value>
                <value>
                    <fullName>2- Medium</fullName>
                </value>
                <value>
                    <fullName>3- High</fullName>
                </value>
                <value>
                    <fullName>4- Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_description__c</fullName>
        <label>Solution description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Project_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>PM_user_story__c</referenceTo>
        <relationshipLabel>Bugs</relationshipLabel>
        <relationshipName>Bugs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Bug</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>User_Story__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Ready_to_Test</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Solution_description__c</columns>
        <columns>Status__c</columns>
        <columns>User_Story__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Test</value>
        </filters>
        <label>Ready to Test</label>
    </listViews>
    <listViews>
        <fullName>Status_Complete</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>User_Story__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Status - Complete</label>
    </listViews>
    <listViews>
        <fullName>Status_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Solution_description__c</columns>
        <columns>User_Story__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Status -In Progress</label>
    </listViews>
    <listViews>
        <fullName>Status_New</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>User_Story__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Status -New</label>
    </listViews>
    <listViews>
        <fullName>Status_Ready_for_test</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>User_Story__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Test</value>
        </filters>
        <label>Status -Ready for test</label>
    </listViews>
    <nameField>
        <displayFormat>B-{00000000}</displayFormat>
        <label>Bug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bugs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>